// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorNav EditorNav component 1`] = `
<div
  className="viewer--components--nav editor--components--nav  is-not-locked is-not-open is-enabled"
>
  <ul />
  <div
    className="button-bar"
  >
    <button
      className="content-add-button"
      onClick={[Function]}
    >
      + Add Page
    </button>
    <button
      className="content-add-button"
      onClick={[Function]}
    >
      + Add Assessment
    </button>
    <br />
    <button
      className="content-add-button"
      onClick={[Function]}
    >
      Rename Module
    </button>
    <button
      className="content-add-button"
      onClick={[Function]}
    >
      Copy Module URL
    </button>
  </div>
</div>
`;

exports[`EditorNav EditorNav component with all list item types 1`] = `
<div
  className="viewer--components--nav editor--components--nav  is-locked is-not-open is-enabled"
>
  <ul>
    <li
      className="heading is-not-selected"
    >
      <span>
        label4
      </span>
    </li>
    <li
      className="link is-selected is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-label="Currently on Page: label5"
      >
        <span>
          label5
        </span>
      </button>
    </li>
    <li
      className="link is-not-selected is-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-label="Go to label6"
      >
        <span>
          label6
        </span>
      </button>
    </li>
  </ul>
  <div
    className="button-bar"
  >
    <button
      className="content-add-button"
      onClick={[Function]}
    >
      + Add Page
    </button>
    <button
      className="content-add-button"
      onClick={[Function]}
    >
      + Add Assessment
    </button>
    <br />
    <button
      className="content-add-button"
      onClick={[Function]}
    >
      Rename Module
    </button>
    <button
      className="content-add-button"
      onClick={[Function]}
    >
      Copy Module URL
    </button>
  </div>
</div>
`;
